----------------------------------------------------------
Allow to define number of displayed steps:
http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?do=findComment&comment=173142
----------------------------------------------------------
Allow to delete presets
http://midibox.org/forums/topic/19774-question-about-expected-behaviour-in-song-mode/#comment-173653
----------------------------------------------------------
Song Page: add "Mute Pattern" (all 4 tracks) command
http://midibox.org/forums/topic/19774-question-about-expected-behaviour-in-song-mode/#comment-173653
----------------------------------------------------------
Add command which copies the current pattern configurations into multiple pattern slots (e.g. current patterns -> A1/A2/A3/...)
http://midibox.org/forums/topic/19774-question-about-expected-behaviour-in-song-mode/#comment-173653
----------------------------------------------------------
Drum track: select trigger layer, then push parameter button A or B: parameter values not displayed
http://midibox.org/forums/topic/19774-question-about-expected-behaviour-in-song-mode/?do=findComment&comment=173700
----------------------------------------------------------


Wishlist for MIDIbox SEQ V4 Plus
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

V4 Plus will require a STM32F4 core which offers much more memory.
Accordingly, resource hungry features could be implemented.

Here a list:

- Expression Layer:
  http://midibox.org/forums/topic/18732-fr-expression-layer/

- Audio metronome function
http://midibox.org/forums/topic/19300-metronome-audio-out-on-stm32f4discovery/

- allocate some memory to sort the directory view instead of loading directly from SD Card
http://midibox.org/forums/topic/19774-question-about-expected-behaviour-in-song-mode/#comment-173653


- allow to define delays based on ports & channels instead of only the port.
http://midibox.org/forums/topic/19774-question-about-expected-behaviour-in-song-mode/#comment-173653
